# decent-array

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
benchmarks/: bench_array.py  bench_common.py  bench_iop.py  profile_hotpath.py
decent_array/: __init__.py  _array.py  array.py  types.py
decent_array/interoperability/: __init__.py  _backend_manager.py  _decorators.py  backend_manager.py  decorators.py
decent_array/interoperability/_abstracts/: backend.py
decent_array/interoperability/_iop/: bit_operators.py  comparasion.py  creation.py  functions.py  linalg.py  manipulations.py  math.py  operators.py  reductions.py  rng.py  utils.py
decent_array/interoperability/_jax/: __init__.py  jax_backend.py
decent_array/interoperability/_numpy/: __init__.py  numpy_backend.py
decent_array/interoperability/_pytorch/: __init__.py  pytorch_backend.py
decent_array/interoperability/_tensorflow/: __init__.py  tensorflow_backend.py
decent_array/interoperability/abstracts/: __init__.py  backend.py
decent_array/interoperability/iop/: functions.py  rng.py
docs/source/: author.rst  conf.py  developer.rst  index.rst  user.rst
docs/source/api/: decent_array.array.rst  decent_array.interoperability.rst  decent_array.rst  decent_array.types.rst
tests/: conftest.py  test_array.py  test_backend_manager.py  test_decorators.py  test_iop_functions.py  test_iop_rng.py
